samples/_failures_safe/1761623913_f538cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_354b4e10.c: In function ‘main’:
./samples/SAFE/__tmp_354b4e10.c:148:27: error: expected ‘;’ at end of input
  148 |                     printf
      |                           ^
      |                           ;
./samples/SAFE/__tmp_354b4e10.c:148:21: error: expected declaration or statement at end of input
  148 |                     printf
      |                     ^~~~~~
./samples/SAFE/__tmp_354b4e10.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_354b4e10.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_354b4e10.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_354b4e10.c:148:21: error: expected declaration or statement at end of input
